fix: wrap long text in the panels with checkboxes in the works section
see the issue for details

fixes issue #1112

--- a/src/app/cdk/panel/panel/panel.component.scss
+++ b/src/app/cdk/panel/panel/panel.component.scss
@@ -84,3 +84,9 @@ div.hide:hover {
     margin-top: 4px;
   }
 }
+
+mat-checkbox.text-wrap {
+  ::ng-deep label.mat-checkbox-layout {
+    white-space: normal;
+  }
+}
